--- a/marketplace/public/css/app.css
+++ b/marketplace/public/css/app.css
@@ -66,6 +66,7 @@ section {
 
 body {
   margin: 0;
+  margin-top: 80px;
   font-family: "Roboto", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
@@ -420,18 +421,19 @@ h6,
 }
 
 .footer-nav {
+  position: fixed;
+  left: 0;
+  bottom: 0;
   width: 100%;
   height: 50px;
   display: flex;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #ccccff;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 0;
 }
 
 .footer-nav p {
-  color: #ccccff;
+  color: #6c757d;
   text-align: end;
   font-size: 16px;
   font-weight: bold;
@@ -4581,13 +4583,17 @@ input[type=button].btn-block {
 }
 
 .navbar {
-  position: relative;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  /* position: relative; */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .navbar .container,
@@ -5062,6 +5068,15 @@ input[type=button].btn-block {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+.card-store-single, .card-category-single, .register {
+  margin-bottom: 30px;
+}
+
+.checkout {
+  margin-bottom: 70px;
 }
 
 .card-title {
