--- a/marketplace/public/css/app.css
+++ b/marketplace/public/css/app.css
@@ -424,6 +424,7 @@ h6,
   position: fixed;
   left: 0;
   bottom: 0;
+  margin-top: 50px;
   width: 100%;
   height: 50px;
   display: flex;
@@ -437,6 +438,10 @@ h6,
   text-align: end;
   font-size: 16px;
   font-weight: bold;
+}
+
+.admin-create-edit, .pages-margin {
+  margin-bottom: 80px;
 }
 
 .lead {
@@ -4594,6 +4599,20 @@ input[type=button].btn-block {
   justify-content: space-between;
   padding: 0.5rem 1rem;
   /* margin-bottom: 30px; */
+}
+
+.btn-register-store {
+  border: 1px solid #ccccff;
+  border-radius: 5px;
+  padding: 0;
+  margin-right: 5px;
+}
+
+.btn-login {
+  border: 1px solid #ccccff;
+  border-radius: 5px;
+  padding: 0;
+  margin-right: 5px;
 }
 
 .navbar .container,
