--- a/marketplace/public/css/app.css
+++ b/marketplace/public/css/app.css
@@ -4601,18 +4601,13 @@ input[type=button].btn-block {
   /* margin-bottom: 30px; */
 }
 
-.btn-register-store {
+.btn-register-store, .btn-login {
   border: 1px solid #ccccff;
   border-radius: 5px;
   padding: 0;
   margin-right: 5px;
-}
-
-.btn-login {
-  border: 1px solid #ccccff;
-  border-radius: 5px;
-  padding: 0;
-  margin-right: 5px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar .container,
@@ -6788,6 +6783,9 @@ a.close.disabled {
 
 .carousel {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .carousel.pointer-event {
@@ -6814,7 +6812,7 @@ a.close.disabled {
   margin-right: -100%;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  transition: transform 0.6s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -6856,7 +6854,7 @@ a.close.disabled {
 .carousel-fade .active.carousel-item-right {
   z-index: 0;
   opacity: 0;
-  transition: opacity 0s 0.6s;
+  transition: opacity 0s 0.3s;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -6879,7 +6877,7 @@ a.close.disabled {
   color: #fff;
   text-align: center;
   opacity: 0.5;
-  transition: opacity 0.15s ease;
+  transition: opacity 0.5s ease;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -6932,8 +6930,8 @@ a.close.disabled {
   display: flex;
   justify-content: center;
   padding-left: 0;
-  margin-right: 15%;
-  margin-left: 15%;
+  /* margin-right: 15%; */
+  /* margin-left: 15%; */
   list-style: none;
 }
 
@@ -6946,12 +6944,12 @@ a.close.disabled {
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #6c757d;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
   opacity: 0.5;
-  transition: opacity 0.6s ease;
+  transition: opacity 0.3s ease;
 }
 
 @media (prefers-reduced-motion: reduce) {
